# dropsland-scaffold-nextjs

./: .env.example  .gitignore  AGENTS.md  REPO.md  environments.toml  eslint.config.js  next.config.mjs  package-lock.json  package.json  tsconfig.json
contracts/dj-fungible/: Cargo.toml  Makefile
contracts/dj-nft/: Cargo.toml
contracts/factory/: Cargo.toml  deploy.sh
contracts/factory/src/: contract.rs  lib.rs  test.rs
contracts/factory/src/methods/: initialize.rs
contracts/factory/src/storage/: admin.rs  mod.rs  token.rs  types.rs
src/: App.tsx
src/app/: globals.css  layout.tsx
src/components/: BottomNav.module.css  BottomNav.tsx  BuyDialog.tsx  ConnectAccount.module.css  ConnectAccount.tsx  CreateNftCollectionForm.tsx  CreateSACTokenButton.tsx  CreateTokenForm.css  CreateTokenForm.tsx  Debugger.tsx  FundAccountButton.tsx  GuessTheNumber.tsx  HeaderLogo.module.css  HeaderLogo.tsx  NetworkPill.tsx  ProfileTypeSelector.module.css  ProfileTypeSelector.tsx  RewardManagerCard.tsx  RewardsDialog.tsx  WalletButton.tsx
src/contracts/: util.ts
src/hooks/: useArtistNftCollections.ts  useArtistRewards.ts  useBuyToken.ts  useClaimReward.ts  useCreateNftCollection.ts  useCreateReward.ts  useOwnedNfts.ts  useProfileType.ts  useSubscription.ts  useTokenCreation.ts
src/layout/: AppMainLayout.tsx  Layout.tsx
src/pages/: Home.tsx  Profile.tsx
src/providers/: AppProviders.tsx  NotificationProvider.module.css  NotificationProvider.tsx  ProfileTypeProvider.tsx
src/services/: artistTokens.ts  buyToken.ts  rewards.ts  tokenCreation.ts
supabase/: config.toml
(+59 files in other folders)
