[package]
name = "factory"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

soroban-sdk = { workspace = true }
soroban-token-sdk = "23.0.2"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[dependencies]
soroban-sdk.workspace = true
